Draw first tile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <div class="assets">
             <img src="full_map.png" id="full_map">
+            <img src="tilemap1.png" id="tilemap1">
         </div>
 
         <script src="game.js" type="module"></script>
