Prevent canvas from bluring the pixel art

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 translate: -50% -50%;
                 max-width: 95%;
                 max-height: 95%;
+                image-rendering: crisp-edges;
+                image-rendering: pixelated;
             }
             .assets{
                 display: none;
